@@ -1,4 +1,5 @@
 ThisBuild / version := "0.1.0-SNAPSHOT"
+ThisBuild / fork := true
 
 ThisBuild / scalaVersion := "2.13.16"
 
@@ -24,6 +25,7 @@ javaOptions ++= Seq(
     "--add-opens", "java.base/java.nio=ALL-UNNAMED",
     "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
     "--add-opens", "java.base/java.util=ALL-UNNAMED",
-    "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"
+    "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"
 )
 
